css/main.css
---
---
:root {
  --sans: -apple-system, BlinkMacSystemFont, Avenir Next, Avenir, Helvetica, Helvetica Neue, Ubuntu, Roboto, Noto, Arial, sans-serif;
}
/* General */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    vertical-align: baseline;
}
body {
    font-family: var(--sans);
    font-weight: 300;
    font-size: 18pt;
    color: #666;
    line-height: 1.5;
}
/* Major regions */
nav {
    padding: 10px;
    position: fixed;
    z-index: 5;
    top: 0px;
    width: 100%;
    height: 50px;
    background-color: white;
    text-align: center;
    transition: box-shadow 0.3s;
}
nav img,
nav ul {
    display: inline-block;
    z-index: 6;
}
nav #logo {
    border: none;
}
nav img {
    z-index: 50;
    height: 150px;
    width: 150px;
    transition: width 0.3s, height 0.3s;
}
nav ul {
    vertical-align: top;
    list-style-type: none;
    text-align: left;
}
nav.floating {
    box-shadow: 3px 3px 12px rgba(12, 12, 12, 0.5);
}
nav.floating img {
    height: 50px;
    width: 50px;
}
nav li {
    position: relative;
    margin-left: 20px;
    display: inline-block;
    transition: border-bottom 0.3s;
}
nav li ul {
    position: absolute;
    z-index: 5;
    text-align: center;
    top: 100%;
    left: 0;
    background-color: white;
    width: 100%;
    margin: 0px;
    padding: 5px 4px;
    border-radius: 3px;
    transition: opacity 0.3s;
    opacity: 0;
    pointer-events: none;
}
nav li:hover ul {
    pointer-events: auto;
    opacity: 1;
    box-shadow: 0px 6px 6px 0px rgba(12, 12, 12, 0.3);
}
nav li ul li {
    display: inline-block;
    margin: 0px 3px;
    width: min-content
}
/* First section, only if it's not a jumbotron */
body > section:first-of-type {
    margin-top: 80px;
}
section {
    padding: 10px 30px;
}
section > h1 ~ img {
    text-align: center;
}
section ul, section ol {
    padding-left: 25px;
}
section.wide {}
section.jumbotron {
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    border: solid white;
    border-width: 0 2vw;
    height: 50vh;
}
section.jumbotron.home {
    background-image: url('/images/header.jpg');
}
section.jumbotron.about {
    background-image: url('/images/love.jpg');
}
section.jumbotron > * {
    max-width: 100%;
}
/* Images on Welcoming Week page */
/* TODO: handle scaling in a less clumsy way than this mess */
.row .row > div > img,
.row > div > img {
    width: 100%;
}
footer {
    background: #eee;
    color: #aaa;
    font-size: 80%;
    text-align: center;
    padding: 1em 3em;
}
/* Major elements */
h1, h2, h3, h4, h5, h6 {
    font-weight: 700;
}
h1 {
    text-align: center;
}
a {
    transition: all 0.25s ease-out;
    color: inherit;
    text-decoration: none;
    border-bottom: solid 1px rgba(0, 0, 0, 0.3);
}
a:hover {
    border-bottom-color: rgba(0, 0, 0, 1);
}
strong {
    font-weight: 700;
}
nav li a {
    border-bottom: none;
    position: relative;
}
nav li a:hover::after {
    transform: scaleX(1);
    visibility: visible;
}
nav li a::after {
    cursor: default;
    pointer-events: none;
    transform: scaleX(0);
    width: 100%;
    content: '';
    position: absolute;
    z-index: 2;
    left: 0%;
    bottom: 0px;
    height: 2px;
    background-color: black;
    transition: transform 0.2s ease-in-out;
}
p {
    text-align: justify;
    padding: 6px 0;
}
.motive {
    font-weight: bold;
}
p.heading {
    text-decoration: underline;
}
.jumbotron.split {
    margin-top: 20px;
    margin-bottom: 10px;
}
/* .jumbotron.split ~ p {
    clear: both;
} */
.video-embed {
    display: block;
    margin: 10px auto;
    max-width: 100%;
    margin-bottom: 0px;
}
p.caption {
    color: gray;
    font-size: 18px;
    text-align: center;
}
.inline-main-img {
    /* Subtract half of right margin */
    width: calc(50% - 20px);
    float: left;
    margin-right: 40px;
    margin-top: 10px;
    display: block;
}

.inline-main-img.right {
    float: right;
    margin-left: 40px;
    margin-right: 0px;
}

.inline-img {
    display: inline-block;
    margin-top: 10px;
    width: calc(25% - 20px);
    min-width: 150px;
}
.inline-img.right {
    float: right;
    margin-left: 40px;
}
.inline-img.left {
    float: left;
    margin-right: 40px;
}
#nav-list-button {
    width: 40px;
    height: 40px;
    display: none;
    text-align: initial;
}
body.nav-open nav #nav-list-button > span:last-child {
    transform: translateY(-10px) rotate(45deg);
}

body.nav-open nav #nav-list-button > span:nth-child(2) {
    opacity: 0;
}

body.nav-open nav #nav-list-button > span:first-child {
    transform: translateY(10px) rotate(-45deg);
}
body.nav-open nav > ul {
    overflow-x: hidden;
    overflow-y: auto;
    pointer-events: all;
    opacity: 1;
    background-color: white;
}
body.nav-open {
    overflow: hidden;
}
.banner {
    background-color: rgb(0, 193, 194);
    text-align: center;
    transition: transform 0.3s;
    color: white;
}
button, input[type="submit"] {
    box-sizing: border-box;
    background: white;
    font-size: 14px;
    border: none;
    padding: 5px 7px;
    cursor: pointer;
    min-width: 65px;
    border-radius: 3px;
    color: rgb(0, 193, 194);
}
input:not([type="submit"]) {
    box-sizing: border-box;
    padding: 2px 4px;
    font-size: 14px;
    border: none;
    border-radius: 3px;
    min-width: 100px;
    max-width: 200px;
    margin: 0px 12px;
}
.highlight {
    background-color: #FFFF00;
    padding: 0.1em;
}
@media (min-width: 1276px) {
    nav ul {
        margin: 0px 5px;
    }
    section {
        padding: 30px 50px;
    }
    section > * {
        max-width: 10in;
        margin: 0 auto;
    }
    section.wide > * {
        max-width: 14in;
    }
    section.jumbotron {
        height: 80vh;
    }
    /* Rows */
    .row {
        display: flex;
        flex-wrap: wrap;
        box-sizing: border-box;
        align-items: stretch;
    }
    .row > * {
        box-sizing: border-box;
        padding: 20px;
        vertical-align: middle;
    }
    .row > .col-1 { width: 8.3333333333%; }
    .row > .col-2 { width: 16.6666666667%; }
    .row > .col-3 { width: 25%; }
    .row > .col-4 { width: 33.3333333333%; }
    .row > .col-5 { width: 41.6666666667%; }
    .row > .col-6 { width: 50%; }
    .row > .col-7 { width: 58.3333333333%; }
    .row > .col-8 { width: 66.6666666667%; }
}

@media (max-width: 649px) {
    #partner-images {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        box-sizing: border-box;
        align-items: stretch;
        justify-items: center;
    }
    #partner-images > * {
        margin: 0 auto;
        box-sizing: border-box;
        padding: 20px;
        vertical-align: middle;
    }
    #partner-images img {
        max-height: 300px;
        max-width: 300px;
    }
    .jumbotron.split > img ~ p {
        clear: both;
    }
    .jumbotron.split {
        text-align: center;
    }
    .jumbotron.split > img {
        margin-right: 0px;
        margin-left: 0px;
        display: inline-block;
        float: none;
        width: initial;
        /* 60px padding on section */
        max-width: calc(100vw - 60px);
        max-height: 200px;
    }
    input:not([type="submit"]) {
        height: 25px;
    }
    .banner > span {
        font-size: 15px;
        flex: 1 0 150px;
    }
}
@media (min-width: 650px) and (max-width: 1275px) {
    /* Rows */
    .row.small {
        display: flex;
        flex-wrap: wrap;
        box-sizing: border-box;
        align-items: stretch;
    }
    .row.small > * {
        box-sizing: border-box;
        padding: 20px;
        vertical-align: middle;
    }
    .row.small > .col-1 { width: 8.3333333333%; }
    .row.small > .col-2 { width: 16.6666666667%; }
    .row.small > .col-3 { width: 25%; }
    .row.small > .col-4 { width: 33.3333333333%; }
    .row.small > .col-5 { width: 41.6666666667%; }
    .row.small > .col-6 { width: 50%; }
    .row.small > .col-7 { width: 58.3333333333%; }
    .row.small > .col-8 { width: 66.6666666667%; }
}
@media (min-width: 1050px) {
    body > nav {
        display: flex;
        justify-content: center;
    }
    body > nav ~ section > h1 + p {
        margin-top: 20px;
    }
    .banner {
        display: flex;
        /* Nav height */
        top: 50px;
        left: 0px;
        width: 100%;
        font-size: 12px;
        right: 30px;
        width: 100vw;
        height: auto;
        z-index: 3;
        font-size: 20px;
        flex-wrap: nowrap;
        align-items: center;
        justify-content: center;
    }
    nav:not(.floating) + .banner {
        transform: translate(0px);
    }
    nav.floating + .banner {
        transform: translateY(-50px);
    }
}
@media (max-width: 1050px) {
    nav > ul {
        position: absolute;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-evenly;
        opacity: 0;
        pointer-events: none;
        top: 100%;
        left: 0;
        margin: auto 0px;
        z-index: -1;
        padding: 80px 0px;
        width: 100vw;
        height: calc(100vh - 50px);
    }
    nav ul li ul {
        position: relative;
        top: 0;
        left: 0;
        opacity: 1;
        pointer-events: all;
        display: flex;
    }
    #nav-list-button {
        display: block;
        position: relative;
        float: right;
        margin-right: 30px;
        line-height: 9px;
        cursor: pointer;
        /* Account for top padding */
        margin-top: -5px;
        text-align: center;
    }
    #nav-list-button > span {
        height: 5px;
        width: 35px;
        transition: transform 0.2s ease, opacity 0.2s ease;
        background-color: #666;
        display: inline-block;
    }
    nav img {
        float: left;
        margin-left: 30px;
    }
    section.jumbotron {
        height: 30vh;
    }
    nav li {
        margin-top: 5px;
        width: max-content;
        text-align: center;
        margin-left: 0px;
        margin-bottom: 10px;
    }
    body > nav ~ section > h1.small {
        /* 10 px for nav bar top padding */
        top: 5px;
        margin: 0px auto;
        width: min-content;
        position: sticky;
        position: -webkit-sticky;
        z-index: 10;
    }
    body.nav-open nav ~ section:not(.jumbotron) > h1.small {
        /* 10 px for nav bar top padding */
        top: 5px;
        margin: 0px auto;
        width: min-content;
        position: fixed;
        left: 0;
        right: 0;
        z-index: 10;
    }
    nav li:hover ul {
        pointer-events: auto;
        opacity: 1;
        box-shadow: none;
    }
    nav > ul > li:first-of-type {
        margin-top: 15px;
    }
    body.nav-open .banner {
        display: flex;
        z-index: 10;
        top: 60px;
        padding: 0px 20px;
        min-height: 50px;
        height: auto;
        width: 100vw;
        position: fixed;
        align-items: center;
        justify-content: center;
        flex-wrap: nowrap;
    }
}
@media (max-width: 1276px) {
    nav ul {
        font-size: 20px;
    }
    body {
        font-size: 15pt;
    }
    nav img {
        height: 100px;
        width: 100px;
    }
}

